project10-kubernetes-deployment-platform/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: project10
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
